@@ -42,6 +42,7 @@ export("+.section",
        ctdUpdateHeader,
        ctimeToSeconds,
        decimate,
+       decodeHeaderNortek,
        despike,
        detrend,
        distance,
