@@ -38,6 +38,5 @@ processingLogShow <- function(x)
         cat("  * ", format(x@processingLog$time[i]), " UTC: ``",
             x@processingLog$value[i], "``\n", sep="")
     }
-    invisible()
 }
 
