@@ -1,4 +1,5 @@
 0.9-13
+- read.adv.nortek(): read salinity
 - ctdDecimate(): fix bug for NULL columns [issue 327]
 - plot.section() now chooses best coastline file
 - swPressure() added
